# llama-cpp-router

./: .gitignore  Cargo.toml  config.json  schema.json
src/: api.rs  cli.rs  commands.rs  config.rs  estimate_gguf_size.rs  main.rs  models.rs  reqwest_ext.rs
src/api/: catchall.rs  models.rs  open_ai.rs  result.rs  state.rs
src/config/: alias_or_index.rs  detach.rs  external.rs  llama_cpp.rs  model.rs
src/estimate_gguf_size/: download_partial_gguf.rs  partial_reader.rs
src/models/: quantization.rs
