[package]
name = "llama-cpp-router"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.6", features = ["json", "macros"] }
clap = { version = "4.5.48", features = ["derive"] }
gguf = "0.1.2"
hf-hub = "0.4.3"
reqwest = { version = "0.12.23", features = ["json"] }
schemars = "1.0.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
struson = { version = "0.6.0", features = ["serde"] }
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["full"] }
