[package]
name = "llama-herder"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "hrdr"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
async-recursion = "1.1.1"
axum = { version = "0.8.6", features = ["json", "macros"] }
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.48", features = ["derive"] }
http = "1.3.1"
reqwest = { version = "0.12.23", features = ["json", "stream"] }
reqwest-sse = "0.1.0"
schemars = { version = "1.0.4", features = ["url2"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["full"] }
url = { version = "2.5.7", features = ["serde"] }
utils-rs = { git = "https://github.com/StefanTerdell/utils-rs/", version = "0.3.0" }
